# clearence

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  build_full_guides.py  docker-compose.yml  fetch_mobalytics_guides.py  mobalytics-lol-guides-full.md  mobalytics-lol-guides.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  llm_extract.py  logging_config.py  main.py  ontology.py  pdf.py  schemas.py
app/routers/: __init__.py  ontology.py
core/: __init__.py  config.py  constants.py
docs/: ADR-full.tex  README.md
docs/architecture/: ADR-full.tex
docs/planning/: plan.md
docs/technical/: CODEBASE_TRANSCRIPT.md  EVALUATE_TAB_UI_UNIFICATION_EVALUATION.md  GRAPH_LOAD_STORE_SAVE_RUNDOWN.md  ONTOLOGY_GRAPH_BUILD_AND_GENERATION.md
documents/: ONTOLOGY_GRAPH_BUILD_AND_GENERATION.md  useful_links_content.json  useful_links_content.md
documents/enrichment/: web_enrichment_1772843316_d41d8cd9.md  web_enrichment_1772843321_d41d8cd9.md  web_enrichment_1772843533_d41d8cd9.md  web_enrichment_1772843546_d41d8cd9.md  web_enrichment_1772843949_d41d8cd9.md  web_enrichment_1772844118_7bfed1b8.md  web_enrichment_1772844255_435db381.md  web_enrichment_1772846538_17e25d8c.md  web_enrichment_1772847009_263136ed.md  web_enrichment_1772847291_3f271d06.md  web_enrichment_1772848145_05adbdc2.md
documents/reports/: eval-5ef0b7c6-a9d62360.html  eval-8c62d55d-2d0a4847.html  eval-8c62d55d-9b25980f.html  eval-8c62d55d-d6f8a603.html  eval-8c62d55d-f0f7bcb6.html  eval-8c62d55d-ff3f879a.html  eval-cache-0632a0b0c29d4f709970de9455398af1.json  eval-cache-5ef0b7c679d7424d8f9461d4065a88eb.json  eval-records-39f083c57b2f471e894d7ff1528be584.json  eval-records-48b4cdedaae54059a460b2b96ddc42a4.json  eval-records-5ef0b7c679d7424d8f9461d4065a88eb.json  eval-records-80f93aa86a1445c0a6d184a2b678c560.json  eval-records-8c201c75bb2348c594b3d2631f50bb62.json  eval-records-a41a5b43ede543999b735df16eff9d68.json  eval-records-d15af03c40b14b118455a592e5027129.json  health-39f083c57b2f471e894d7ff1528be584.json  health-48b4cdedaae54059a460b2b96ddc42a4.json  health-5ef0b7c679d7424d8f9461d4065a88eb.json  health-80f93aa86a1445c0a6d184a2b678c560.json  health-8c201c75bb2348c594b3d2631f50bb62.json  health-a41a5b43ede543999b735df16eff9d68.json  health-c0bcd604621942e6a9a83786ceff3a6b.json  health-d15af03c40b14b118455a592e5027129.json  health-d27303e012db402898e4ad7656671edf.json
ontology_builder/: __init__.py  embeddings.py
presentations/: __init__.py  clearence_commercial.py  clearence_technical.py  download_fonts.py  slide_theme.py
scripts/: fetch_link_contents.py  fix_link_content.py  json_to_guide_md.py
tests/: test_agent.py  test_extractor.py  test_graphdb.py  test_hypergraph.py  test_llm_client.py  test_metrics.py  test_owl_exporter.py  test_pipeline.py  test_reasoning.py  test_schema.py  test_taxonomy.py
(+101 files in other folders)
