[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clearence"
version = "0.1.0"
description = "Clearence: Theory-grounded ontology graph builder from documents using LLM extraction, OWL 2 RL reasoning, and ontology-grounded RAG"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["ontology", "llm", "rag", "owl", "knowledge-graph", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.21.0",
    "pydantic>=1.10.0",
    "pydantic-settings>=2.0.0",
    "rdflib>=7.0.0",
    "openai>=1.0.0",
    "python-multipart>=0.0.6",
    "networkx>=3.0",
    "sentence-transformers>=2.2.0",
    "matplotlib>=3.7.0",
    "pdfminer.six>=20221105",
    "python-docx>=1.0.0",
    "requests>=2.28.0",
    "tqdm>=4.65.0",
    "jinja2>=3.0.0",
    "tenacity>=8.0.0",
]

[project.urls]
Homepage = "https://gitlab.com/clearence/clearence"
Repository = "https://gitlab.com/clearence/clearence"
Documentation = "https://gitlab.com/clearence/clearence/-/blob/main/README.md"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "httpx>=0.25.0", "ruff>=0.1.0"]

[project.scripts]
clearence = "app.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "core*", "ontology_builder*"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
